src/objects/FieloPLT__RedemptionItem__c.object
<CustomObject>
    <description>Items in a Redemption order.</description>
    <fields>
        <fullName>FieloPLT__CodeRange__c</fullName>
        <description>It completes the Code to obtain the non-repeating digits needed for the Unique code generation.</description>
        <inlineHelpText>It completes the Code to obtain the non-repeating digits needed for the Unique code generation.</inlineHelpText>
        <label>Code Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Code__c</fullName>
        <description>Preloaded or randomly generated code included in the Unique voucher.</description>
        <inlineHelpText>Preloaded or randomly generated code included in the Unique voucher.</inlineHelpText>
        <label>Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__DeliveredDate__c</fullName>
        <description>Date when the Redemption is delivered.</description>
        <inlineHelpText>Date when the Redemption is delivered.</inlineHelpText>
        <label>Delivered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Description__c</fullName>
        <description>Redemption item description.</description>
        <inlineHelpText>Redemption item description.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloPLT__ExpirationDate__c</fullName>
        <description>Redemption Item expiration date.</description>
        <inlineHelpText>Redemption Item expiration date.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloPLT__IsInstantRedemption__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Redemption item from an Instant Reward.</description>
        <inlineHelpText>When ticked, a Redemption item was generated from an Instant Reward.</inlineHelpText>
        <label>Instant Redemption</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Points__c</fullName>
        <description>Points needed to redeem the Redemption item</description>
        <inlineHelpText>Points needed to redeem the Redemption item.</inlineHelpText>
        <label>Points</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Number of Redemption items.</description>
        <inlineHelpText>Number of Redemption items.</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Redemption__c</fullName>
        <description>Redemption item ID number.</description>
        <inlineHelpText>Redemption item ID number.</inlineHelpText>
        <label>Redemption</label>
        <referenceTo>FieloPLT__Redemption__c</referenceTo>
        <relationshipLabel>Redemption Items</relationshipLabel>
        <relationshipName>RedemptionItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloPLT__RewardItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Item from Rewards whose stock is &quot;Control by item&quot;.</description>
        <inlineHelpText>Item from Rewards whose stock is &quot;Control by item&quot;.</inlineHelpText>
        <label>Reward Item</label>
        <referenceTo>FieloPLT__RewardItem__c</referenceTo>
        <relationshipLabel>Redemption Items</relationshipLabel>
        <relationshipName>RedemptionItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Reward__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reward from Redemption item.</description>
        <inlineHelpText>Reward from Redemption item.</inlineHelpText>
        <label>Reward</label>
        <referenceTo>FieloPLT__Reward__c</referenceTo>
        <relationshipLabel>Redemption Items</relationshipLabel>
        <relationshipName>RedemptionItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Status__c</fullName>
        <description>Redemption item status.</description>
        <inlineHelpText>Redemption item status.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reverted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__UniqueCode__c</fullName>
        <description>Voucher number made up of Code and Code Range.</description>
        <formula>IF( ISPICKVAL(FieloPLT__Reward__r.FieloPLT__StockManagement__c, &apos;Controlled By Item&apos;), FieloPLT__Code__c,
   IF ( FieloPLT__CodeRange__c &lt; 10 ,
      FieloPLT__Code__c + &apos;0&apos; + TEXT( FieloPLT__CodeRange__c ),
      FieloPLT__Code__c + RIGHT( TEXT( FieloPLT__CodeRange__c ), 2 )
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Voucher number made up of Code and Code Range.</inlineHelpText>
        <label>Unique Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VoucherLink__c</fullName>
        <formula>IF(
ISPICKVAL( FieloPLT__Status__c ,&apos;Ready&apos; ) ,
HYPERLINK( &apos;./apex/RedemptionItemVoucher?voucherId=&apos; + Id, $Label.Voucher ),
&apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Voucher Link</label>
        <type>Text</type>
    </fields>
    <label>Redemption Item</label>
    <nameField>
        <displayFormat>RI-{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Redemption Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FieloPLT__QuantityGreaterThanZero</fullName>
        <active>true</active>
        <description>Quantity must be greater than 0.</description>
        <errorConditionFormula>FieloPLT__Quantity__c &lt;= 0</errorConditionFormula>
        <errorMessage>Quantity must be greater than 0.</errorMessage>
    </validationRules>
</CustomObject>